bdr.BDR2.scala.error
Erreur de compilation :
BDR2:3: error: not found: value ==
    case litMessage()=="R" => droite();avance()
                     ^BDR2:3: error: not found: value litMessage
    case litMessage()=="R" => droite();avance()
         ^BDR2:4: error: not found: value ==
    case litMessage()=="L" => gauche();avance()
                     ^BDR2:4: error: not found: value litMessage
    case litMessage()=="L" => gauche();avance()
         ^BDR2:5: error: not found: value ==
    case litMessage()=="I" => droite();droite();avance()
                     ^BDR2:5: error: not found: value litMessage
    case litMessage()=="I" => droite();droite();avance()
         ^BDR2:6: error: not found: value ==
    case litMessage()=="A" => avance()
                     ^BDR2:6: error: not found: value litMessage
    case litMessage()=="A" => avance()
         ^BDR2:7: error: not found: value ==
    case litMessage()=="B" => avance();avance()
                     ^BDR2:7: error: not found: value litMessage
    case litMessage()=="B" => avance();avance()
         ^BDR2:8: error: not found: value ==
    case litMessage()=="C" => avance();avance();avance()
                     ^BDR2:8: error: not found: value litMessage
    case litMessage()=="C" => avance();avance();avance()
         ^BDR2:9: error: not found: value ==
    case litMessage()=="D" => avance();avance();avance();avance()
                     ^BDR2:9: error: not found: value litMessage
    case litMessage()=="D" => avance();avance();avance();avance()
         ^BDR2:10: error: not found: value ==
    case litMessage()=="E" => avance();avance();avance();avance();avance()
                     ^BDR2:10: error: not found: value litMessage
    case litMessage()=="E" => avance();avance();avance();avance();avance()
         ^BDR2:11: error: not found: value ==
    case litMessage()=="Z" => recule()
                     ^BDR2:11: error: not found: value litMessage
    case litMessage()=="Z" => recule()
         ^BDR2:12: error: not found: value ==
    case litMessage()=="Y" => recule();recule()
                     ^BDR2:12: error: not found: value litMessage
    case litMessage()=="Y" => recule();recule()
         ^BDR2:13: error: not found: value ==
    case litMessage()=="X" => recule();recule();recule()
                     ^BDR2:13: error: not found: value litMessage
    case litMessage()=="X" => recule();recule();recule()
         ^BDR2:14: error: not found: value ==
    case litMessage()=="W" => recule();recule();recule();recule()
                     ^BDR2:14: error: not found: value litMessage
    case litMessage()=="W" => recule();recule();recule();recule()
         ^BDR2:15: error: not found: value ==
    case litMessage()=="V" => recule();recule();recule();recule();recule()
                     ^BDR2:15: error: not found: value litMessage
    case litMessage()=="V" => recule();recule();recule();recule();recule()
         ^BDR2:16: error: not found: value ==
    case litMessage()=="U" =>recule();recule();recule();recule();recule();recule()
                     ^BDR2:16: error: not found: value litMessage
    case litMessage()=="U" =>recule();recule();recule();recule();recule();recule()
         ^